uc-500 remove pixel widths in rolltemplate

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -1787,68 +1787,64 @@ span.sheet-spellconcentration
     display: none;
 }
 
-.sheet-rolltemplate-simple .sheet-containerold
-{
-    width: 189px;
-    background: url(http://i.imgur.com/53WSdhx.png) top left;
-    background-size: 189px 100%;
-    background-repeat: no-repeat;
-    color: black;
-}
-
-.sheet-rolltemplate-simple .sheet-container
-{
-    width: 189px;
-    color: black;
-    border: 1px solid black;
-    border-radius: 10px;
+.sheet-rolltemplate-simple .sheet-container,
+.sheet-rolltemplate-atk .sheet-container,
+.sheet-rolltemplate-atkdmg .sheet-container.sheet-atk,
+.sheet-rolltemplate-dmg .sheet-atk,
+.sheet-rolltemplate-dmg .sheet-container,
+.sheet-rolltemplate-atkdmg .sheet-container.sheet-damagetemplate {
     background-color: white;
+    border: 1px solid black;
+    color: black;
+    width: 81%;
 }
 
-.sheet-rolltemplate-atk .sheet-containerold,
-.sheet-rolltemplate-atkdmg .sheet-container.sheet-atkold,
-.sheet-rolltemplate-dmg .sheet-atkold
-{
-    width: 189px;
-    background: url(http://i.imgur.com/4RCRsAd.png) top left;
-    background-size: 189px 100%;
-    background-repeat: no-repeat;
-    color: black;
+.sheet-rolltemplate-simple .sheet-container {
+    border-radius: 10px;
 }
 
 .sheet-rolltemplate-atk .sheet-container,
 .sheet-rolltemplate-atkdmg .sheet-container.sheet-atk,
-.sheet-rolltemplate-dmg .sheet-atk
-{
-    width: 189px;
-    color: black;
-    border: 1px solid black;
+.sheet-rolltemplate-dmg .sheet-atk {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    background-color: white;
-}
-
-
-
-.sheet-rolltemplate-dmg .sheet-containerold,
-.sheet-rolltemplate-atkdmg .sheet-container.sheet-damagetemplateold
-{
-    width: 189px;
-    background: url(http://i.imgur.com/gw9HTsq.png) top left;
-    background-size: 189px 100%;
-    background-repeat: no-repeat;
-    color: black;
 }
 
 .sheet-rolltemplate-dmg .sheet-container,
-.sheet-rolltemplate-atkdmg .sheet-container.sheet-damagetemplate
-{
-    width: 189px;
-    color: black;
-    border: 1px solid black;
+.sheet-rolltemplate-atkdmg .sheet-container.sheet-damagetemplate {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    background-color: white;
+}
+
+/* Obsolete Template */
+.sheet-rolltemplate-simple .sheet-containerold,
+.sheet-rolltemplate-atk .sheet-containerold,
+.sheet-rolltemplate-atkdmg .sheet-container.sheet-atkold,
+.sheet-rolltemplate-dmg .sheet-atkold,
+.sheet-rolltemplate-dmg .sheet-containerold,
+.sheet-rolltemplate-atkdmg .sheet-container.sheet-damagetemplateold {
+    background-repeat: no-repeat;
+    background-size: 189px 100%;
+    color: black;
+    width: 81%;
+}
+
+/* Obsolete Template */
+.sheet-rolltemplate-simple .sheet-containerold {
+    background: url(http://i.imgur.com/53WSdhx.png) top left;
+}
+
+/* Obsolete Template */
+.sheet-rolltemplate-atk .sheet-containerold,
+.sheet-rolltemplate-atkdmg .sheet-container.sheet-atkold,
+.sheet-rolltemplate-dmg .sheet-atkold {
+    background: url(http://i.imgur.com/4RCRsAd.png) top left;
+}
+
+/* Obsolete Template */
+.sheet-rolltemplate-dmg .sheet-containerold,
+.sheet-rolltemplate-atkdmg .sheet-container.sheet-damagetemplateold {
+    background: url(http://i.imgur.com/gw9HTsq.png) top left;
 }
 
 .sheet-rolltemplate-simple .sheet-result,
@@ -1871,11 +1867,11 @@ span.sheet-spellconcentration
 .sheet-rolltemplate-atkdmg .sheet-adv,
 .sheet-rolltemplate-dmg .sheet-adv
 {
-    width: 84px;
     display: inline-block;
+    margin-top: 15px;
     text-align: center;
     vertical-align: top;
-    margin-top: 15px;
+    width: 6.2em;
 }
 
 .sheet-rolltemplate-simple .sheet-adv:first-child,
@@ -1905,11 +1901,11 @@ span.sheet-spellconcentration
 .sheet-rolltemplate-dmg .sheet-adv span,
 .sheet-rolltemplate-dmg .sheet-solo span
 {
-    width: 30px;
-    font-size: 20px;
     background-color: transparent;
     border: 0px;
+    font-size: 20px;
     padding: 0px;
+    width: 1em;
 }
 
 .sheet-rolltemplate-simple .sheet-advspacer,
@@ -1917,21 +1913,20 @@ span.sheet-spellconcentration
 .sheet-rolltemplate-atkdmg .sheet-advspacer,
 .sheet-rolltemplate-dmg .sheet-advspacer
 {
-    width: 0px;
     border: 1px solid black;
     display: inline-block;
     height: 35px;
+    width: 0px;
 }
 
 .sheet-rolltemplate-simple .sheet-solo,
 .sheet-rolltemplate-atk .sheet-solo,
 .sheet-rolltemplate-atkdmg .sheet-solo,
-.sheet-rolltemplate-dmg .sheet-solo
-{
-    width: 100%;
-    text-align: center;
+.sheet-rolltemplate-dmg .sheet-solo {
     height: 23px;
-    padding-top: 15px;
+    padding-top: 1.1em;
+    text-align: center;
+    width: 100%;
 }
 
 .sheet-rolltemplate-simple span,
@@ -1941,17 +1936,17 @@ span.sheet-spellconcentration
 .sheet-rolltemplate-desc span
 {
     font-size: 12px;
+    font-weight: bold;
     line-height: 12px;
     text-align: center;
-    font-weight: bold;
 }
 
 .sheet-rolltemplate-dmg .sheet-desc span.sheet-plus,
 .sheet-rolltemplate-atkdmg .sheet-desc span.sheet-plus
 {
-    font-weight: bold;
-    font-size: 20px;
     display: inline;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .sheet-rolltemplate-simple .sheet-grey,
@@ -2104,30 +2099,34 @@ span.sheet-spellconcentration
     font-weight: bold;
 }
 
+.sheet-rolltemplate-dmg .sheet-desc .inlinerollresult,
+.sheet-rolltemplate-atkdmg .sheet-desc .inlinerollresult,
+.sheet-rolltemplate-atk .sheet-desc .inlinerollresult,
+.sheet-rolltemplate-mancerroll .inlinerollresult,
+.sheet-rolltemplate-mancerhproll .inlinerollresult,
 .sheet-rolltemplate-atk .sheet-save .inlinerollresult,
 .sheet-rolltemplate-dmg .sheet-save .inlinerollresult,
-.sheet-rolltemplate-atkdmg .sheet-save .inlinerollresult
-{
+.sheet-rolltemplate-atkdmg .sheet-save .inlinerollresult {
     background-color: transparent;
     border: 0px;
-    padding: 0px;
     display: inline-block;
     font-weight: bold;
+}
+
+.sheet-rolltemplate-atk .sheet-save .inlinerollresult,
+.sheet-rolltemplate-dmg .sheet-save .inlinerollresult,
+.sheet-rolltemplate-atkdmg .sheet-save .inlinerollresult {
+    padding: 0px;
 }
 
 .sheet-rolltemplate-dmg .sheet-desc .inlinerollresult,
 .sheet-rolltemplate-atkdmg .sheet-desc .inlinerollresult,
 .sheet-rolltemplate-atk .sheet-desc .inlinerollresult,
 .sheet-rolltemplate-mancerroll .inlinerollresult,
-.sheet-rolltemplate-mancerhproll .inlinerollresult
-{
-    background-color: transparent;
-    border: 0px;
-    display: inline-block;
-    font-weight: bold;
+.sheet-rolltemplate-mancerhproll .inlinerollresult {
     font-size: 20px;
-    padding-top: 10px;
     padding-bottom: 6px;
+    padding-top: 10px;
 }
 
 .sheet-rolltemplate-dmg .sheet-desc .sheet-label span,
@@ -2162,18 +2161,19 @@ span.sheet-spellconcentration
     min-height: 17px;
 }
 
+/* Obsolete Template */
 .sheet-rolltemplate-atk .sheet-descold,
 .sheet-rolltemplate-atkdmg .sheet-descold,
 .sheet-rolltemplate-dmg .sheet-descold
 {
-    width: 189px;
-    background: url(http://i.imgur.com/4988JS0.png) top left;
-    background-size: 189px 100%;
     background-repeat: no-repeat;
+    background-size: 189px 100%;
+    background: url(http://i.imgur.com/4988JS0.png) top left;
     color: black;
-    text-align: center;
-    padding-top: 5px;
     padding-bottom: 5px;
+    padding-top: 5px;
+    text-align: center;
+    width: 189px;
 }
 
 .sheet-rolltemplate-atk .sheet-desc,
@@ -2181,13 +2181,13 @@ span.sheet-spellconcentration
 .sheet-rolltemplate-dmg .sheet-desc,
 .sheet-rolltemplate-desc .sheet-desc
 {
-    width: 189px;
+    background-color: white;
     border: 1px solid black;
     color: black;
-    text-align: center;
-    padding-top: 5px;
     padding-bottom: 5px;
-    background-color: white;
+    padding-top: 5px;
+    text-align: center;
+    width: 189px;
 }
 
 .sheet-rolltemplate-atk .sheet-desc span,
@@ -2221,12 +2221,12 @@ span.sheet-spellconcentration
 .sheet-rolltemplate-atkdmg .sheet-desc .sheet-sublabel,
 .sheet-rolltemplate-dmg .sheet-desc .sheet-sublabel
 {
+    color: #A0A0A0;
     display: block;
-    width: 100%;
     font-size: 10px;
     font-weight: normal;
     margin-top: -5px;
-    color: #A0A0A0;
+    width: 100%;
 }
 
 .sheet-rolltemplate-atk .sheet-sublabel span,
