uc-500 remove another pixel width

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -2187,7 +2187,7 @@ span.sheet-spellconcentration
     padding-bottom: 5px;
     padding-top: 5px;
     text-align: center;
-    width: 189px;
+    width: 81%;
 }
 
 .sheet-rolltemplate-atk .sheet-desc span,
