--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -266,74 +266,46 @@ div.sheet-tab-content {
    margin-top: -30px;
 }
 
-input.sheet-character:checked ~ div.sheet-character,
-input.sheet-stronghold:checked ~ div.sheet-stronghold {
+input.sheet-tab[value="character"] ~ div.sheet-character,
+input.sheet-tab[value="ark"] ~ div.sheet-ark {
    display: block;
 }
 
-input[type='radio'].sheet-tab {
-   width: 162px;
-   height: 30px;
-   float: left;
-   margin: 0;
-   -webkit-appearance: none;
-   -moz-appearance: none;
-   appearance: none;
-   border: none;
-   outline: none;
-   position: relative;
-   cursor: pointer;
-   z-index: 1;
+button {
+    border-bottom             : 2px solid #666;
+    border-bottom-right-radius: 2px;
+    border-color              : #aaa;
+    border-radius             : 5px;
+    border-right              : 3px solid #999;
+    border-style              : outset;
+    text-transform: capitalize;
+  }
+
+button:hover {
+    border-color: #441b10;
+    color       : #fcd67b;
+    font-weight : bold;
+    background-color: #8c4110;
 }
 
-input.sheet-tab::before {
-   content: attr(title);
-   border: 1px solid #ccc;
-   border-bottom: 1px solid #444;
-   border-radius: 4px 4px 0 0;
-   padding-bottom: 1px;
-   text-align: center;
-   display: block;
-   color: #444;
-   width: 160px;
-   line-height: 30px;
-   font-size: 16px;
-}
-
-input.sheet-tab:active,
-input.sheet-tab:focus {
-   outline: none;
-}
-
-input.sheet-tab:hover::before {
-   background: #e3e3e3;
-}
-
-input.sheet-tab:checked::before,
-input.sheet-tab:checked:hover::before {
-   border: 1px solid #444;
-   border-bottom: 1px solid #fff;
-   background: #fff;
-}
-
+/* Remove the Die Icon */
+button::before {
+  display: none;}
 .sheet-wrapper {
-  width: 835px;
+  width: 100%;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   overflow: hidden;
   padding-top: 70px;
   padding-bottom: 40px;
-  box-sizing: border-box;
-  border: 8px solid #000;
-  border-image-slice: 60 50 60 50;
-  border-image-width: 60px 50px 60px 50px;
-  border-image-outset: 2 2 0 2;
-  border-image-repeat: repeat repeat;
-  border-image-source: url(http://imgsrv.roll20.net/?src=imgsrv.roll20.net/%3Fsrc%3Di.imgur.com/XuBOFJI.png);
+ }
+
+div.sheet-logo {
+  text-align: center;
 }
 
- .sheet-logo {
-  text-align: center;
-  width: 835px;
+div.sheet-logo img {
+  height: 8em;
+  margin-left: 5%;
 }
 
 input {
@@ -464,7 +436,6 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
   grid-template-rows: repeat(4, auto);
   grid-column-gap: 4px;
   grid-row-gap: 4px;
-  margin: -12px 5px 0 5px;
 }
 
 .sheet-box {
@@ -475,26 +446,19 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
 }
 
 .sheet-character-attributes {
-  grid-row-start: 1;
+  grid-row-start: 2;
   grid-column-start: 1;
 }
 
 .sheet-character-details {
   grid-row-start: 1;
-  grid-column-start: 2;
+  grid-column-start: 1;
   padding: 5px;
 }
 
 .sheet-character-appearance {
-  grid-row-start: 1;
-  grid-column-start: 3;
-}
-
-.sheet-character-conditions {
   grid-row-start: 2;
-  grid-column: 1/4;
-  border: none;
-  padding: 5px 0 5px 0;
+  grid-column-start: 2;
 }
 
 .sheet-character-injuries {
@@ -629,7 +593,7 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
 
 .sheet-details-grid {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 4fr 1fr 4fr 3fr 3fr 3fr 3fr;
   grid-column-gap: 2px;
   grid-row-gap: 10px;
   padding-top: 5px;
@@ -637,13 +601,13 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
 
 .sheet-details-grid > div {
   display: flex;
-  justify-content: space-around;
   align-items: center;
 }
 
 .sheet-details-box1 {
   grid-row-start: 1;
   grid-column-start: 1;
+  justify-content: space-between;
 }
 
 .sheet-details-box2 {
@@ -652,44 +616,14 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
 }
 
 .sheet-details-box3 {
-  grid-row-start: 2;
-  grid-column-start: 1;
+  grid-row-start: 1;
+  grid-column-start: 3;
+  justify-content: space-between;
 }
 
 .sheet-details-box4 {
-  grid-row-start: 2;
-  grid-column-start: 2;
-}
-
-.sheet-details-box5 {
-  grid-row-start: 3;
-  grid-column-start: 1;
-}
-
-.sheet-details-box6 {
-  grid-row-start: 3;
-  grid-column-start: 2;
-}
-
-.sheet-details-box7 {
-  grid-row-start: 4;
-  grid-column-start: 1;
-}
-
-.sheet-details-box8 {
-  grid-row-start: 4;
-  grid-column-start: 2;
-}
-
-.sheet-details-box9 {
-  grid-row-start: 5;
-  grid-column-start: 1;
-  text-align: center;
-}
-
-.sheet-details-box10 {
-  grid-row-start: 5;
-  grid-column-start: 2;
+  grid-row-start: 1;
+  grid-column-start: 4;
 }
 
 /* ---------------------------------- Appearance */
@@ -742,26 +676,6 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
   grid-column: 2/5;
 }
 
-.sheet-appearance-box8 {
-  grid-row-start: 5;
-  grid-column-start: 1;
-}
-
-.sheet-appearance-box9 {
-  grid-row-start: 5;
-  grid-column-start: 2;
-}
-
-.sheet-appearance-box10 {
-  grid-row-start: 5;
-  grid-column-start: 3;
-}
-
-.sheet-appearance-box11 {
-  grid-row-start: 5;
-  grid-column-start: 4;
-}
-
 /* ---------------------------------- Conditions */
 
 .sheet-conditions-grid {
@@ -771,7 +685,6 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
 
 .sheet-conditions-grid > div {
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -815,10 +728,10 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
   grid-column-start: 9;
 }
 
-input.sheet-conditions-hungry:checked ~ div > span.sheet-conditions-hungry,
-input.sheet-conditions-sleepy:checked ~ div > span.sheet-conditions-sleepy,
-input.sheet-conditions-thirsty:checked ~ div > span.sheet-conditions-thirsty,
-input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
+input.sheet-conditions-starving:checked ~ div > span.sheet-conditions-starving,
+input.sheet-conditions-sleepless:checked ~ div > span.sheet-conditions-sleepless,
+input.sheet-conditions-dehydrated:checked ~ div > span.sheet-conditions-dehydrated,
+input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothermic {
   color: #800000;
   font-weight: bold;
 }
@@ -1585,9 +1498,9 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
   grid-column: 1/8;
 }
 
-/* stronghold grid layout */
+/* ark grid layout */
 
-.sheet-stronghold-grid {
+.sheet-ark-grid {
   display: grid;
   grid-template-columns: 1fr 1fr auto;
   grid-template-rows: repeat(4, auto);
@@ -1596,92 +1509,92 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
   margin: -12px 5px 0 5px;
 }
 
-.sheet-stronghold-details {
+.sheet-ark-details {
   grid-column: 1/3;
   grid-row-start: 1;
 }
 
-.sheet-stronghold-functions {
+.sheet-ark-functions {
   grid-column-start: 1;
 }
 
-.sheet-stronghold-hirelings {
+.sheet-ark-hirelings {
   grid-column-start: 2;
 }
 
-.sheet-stronghold-stockpile {
+.sheet-ark-stockpile {
   grid-column: 1/2;
   grid-row-start: 3;
 }
 
-.sheet-stronghold-notes {
+.sheet-ark-notes {
   grid-column-start: 2;
   grid-row-start: 3;
 }
 
-/* ---------------------------------- Stronghold Details */
+/* ---------------------------------- ark Details */
 
-.sheet-stronghold-details-grid {
+.sheet-ark-details-grid {
   display: grid;
   grid-template-columns: 0em auto 14em auto 14em auto 3em 3em;
   grid-row-gap: 10px;
   padding-bottom: 10px;
 }
 
-.sheet-stronghold-details-grid > div {
+.sheet-ark-details-grid > div {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-.sheet-stronghold-details-box1 {
+.sheet-ark-details-box1 {
   grid-row-start: 1;
   grid-column: 1/9;
 }
 
-.sheet-stronghold-details-box2 {
+.sheet-ark-details-box2 {
   grid-row-start: 2;
   grid-column-start: 2;
 }
 
-.sheet-stronghold-details-box3 {
+.sheet-ark-details-box3 {
   grid-row-start: 2;
   grid-column-start: 3;
 }
 
-.sheet-stronghold-details-box4 {
+.sheet-ark-details-box4 {
   grid-row-start: 2;
   grid-column-start: 4;
 }
 
-.sheet-stronghold-details-box5 {
+.sheet-ark-details-box5 {
   grid-row-start: 2;
   grid-column-start: 5;
 }
 
-.sheet-stronghold-details-box6 {
+.sheet-ark-details-box6 {
   grid-row-start: 2;
   grid-column-start: 6;
 }
 
-.sheet-stronghold-details-box7 {
+.sheet-ark-details-box7 {
   grid-row-start: 2;
   grid-column-start: 7;
 }
 
-.sheet-stronghold-details-box8 {
+.sheet-ark-details-box8 {
   grid-row-start: 3;
   grid-column: 2/3;
 }
 
-.sheet-stronghold-details-box9 {
+.sheet-ark-details-box9 {
   grid-row-start: 3;
   grid-column: 3/8;
 }
 
-/* ---------------------------------- Stronghold Functions */
+/* ---------------------------------- ark Functions */
 
-.sheet-stronghold-functions-grid {
+.sheet-ark-functions-grid {
   display: grid;
   grid-template-columns: 2fr 3em 3fr;
   grid-template-rows: auto;
@@ -1689,44 +1602,44 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
   grid-column-gap: 2px;
 }
 
-.sheet-stronghold-functions-grid > div,
-.sheet-stronghold-functions-grid > input,
-.sheet-stronghold-functions-grid > textarea {
+.sheet-ark-functions-grid > div,
+.sheet-ark-functions-grid > input,
+.sheet-ark-functions-grid > textarea {
   box-sizing: border-box;
 }
 
-.sheet-stronghold-functions-grid > .sheet-input-textarea {
+.sheet-ark-functions-grid > .sheet-input-textarea {
   height: 2.25em;
 }
 
-.sheet-stronghold-functions-box {
+.sheet-ark-functions-box {
   grid-row-start: 1;
   grid-column: 1/4;
 }
 
-.sheet-stronghold-functions-box1 {
+.sheet-ark-functions-box1 {
   grid-row-start: 1;
   grid-column-start: 1;
 }
 
-.sheet-stronghold-functions-box2 {
+.sheet-ark-functions-box2 {
   grid-row-start: 1;
   grid-column-start: 2;
 }
 
-.sheet-stronghold-functions-box3 {
+.sheet-ark-functions-box3 {
   grid-row-start: 1;
   grid-column-start: 3;
 }
 
-.sheet-stronghold-functions-box4 {
+.sheet-ark-functions-box4 {
   grid-row-start: 2;
   grid-column: 1/4;
 }
 
-/* ---------------------------------- Stronghold Hirelings */
+/* ---------------------------------- ark Hirelings */
 
-.sheet-stronghold-hirelings-grid {
+.sheet-ark-hirelings-grid {
   display: grid;
   grid-template-columns: 3fr 3em 1fr;
   grid-template-rows: auto;
@@ -1734,70 +1647,70 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
   grid-column-gap: 2px;
 }
 
-.sheet-stronghold-hirelings-box {
+.sheet-ark-hirelings-box {
   grid-row-start: 1;
   grid-column: 1/4;
 }
 
-.sheet-stronghold-hirelings-box1 {
+.sheet-ark-hirelings-box1 {
   grid-row-start: 1;
   grid-column-start: 1;
 }
 
-.sheet-stronghold-hirelings-box2 {
+.sheet-ark-hirelings-box2 {
   grid-row-start: 1;
   grid-column-start: 2;
 }
 
-.sheet-stronghold-hirelings-box3 {
+.sheet-ark-hirelings-box3 {
   grid-row-start: 1;
   grid-column-start: 3;
 }
 
-.sheet-stronghold-hirelings-box4 {
+.sheet-ark-hirelings-box4 {
   grid-row-start: 2;
   grid-column: 1/4;
 }
 
-/* ---------------------------------- Stronghold Stockpile */
+/* ---------------------------------- ark Stockpile */
 
-.sheet-stronghold-stockpile-grid {
+.sheet-ark-stockpile-grid {
   display: grid;
   grid-template-columns: 11em 3em 11em 3em 11em 3em;
   grid-template-rows: auto;
   grid-row-gap: 2px;
 }
 
-.sheet-stronghold-stockpile-grid > div,
-.sheet-stronghold-stockpile-grid > span {
+.sheet-ark-stockpile-grid > div,
+.sheet-ark-stockpile-grid > span {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-.sheet-stronghold-stockpile-box1 {
+.sheet-ark-stockpile-box1 {
   grid-row-start: 1;
   grid-column: 1/7;
 }
 
-.sheet-stronghold-stockpile-box2 {
+.sheet-ark-stockpile-box2 {
   grid-row-start: 1;
   grid-column-start: 2;
 }
 
-.sheet-stronghold-stockpile-box3 {
+.sheet-ark-stockpile-box3 {
   grid-row-start: 1;
   grid-column-start: 4;
 }
 
-.sheet-stronghold-stockpile-box4 {
+.sheet-ark-stockpile-box4 {
   grid-row-start: 1;
   grid-column-start: 6;
 }
 
-/* ---------------------------------- Stronghold Notes */
+/* ---------------------------------- ark Notes */
 
-.sheet-stronghold-notes-grid {
+.sheet-ark-notes-grid {
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto;
@@ -1805,18 +1718,18 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
   grid-row-gap: 2px;
 }
 
-.sheet-stronghold-notes-grid > div,
-.sheet-stronghold-notes-grid > input,
-.sheet-stronghold-notes-grid > textarea {
+.sheet-ark-notes-grid > div,
+.sheet-ark-notes-grid > input,
+.sheet-ark-notes-grid > textarea {
   box-sizing: border-box;
 }
 
-.sheet-stronghold-notes-box1 {
+.sheet-ark-notes-box1 {
   grid-row-start: 1;
   grid-column: 1/2;
 }
 
-.sheet-stronghold-notes-box2 {
+.sheet-ark-notes-box2 {
   grid-row-start: 2;
   grid-column-start: 1;
 }
@@ -1846,8 +1759,8 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
 
 /**** DICE ROLLER STYLING ****/
 
-button[type="action"]:hover,
-button[type="action"]:hover > span,
+div.sheet-weapons-grid button[type="action"]:hover,
+div.sheet-weapons-grid button[type="action"]:hover > span,
 button[type="roll"]:hover {
   background: #810000;
   color: #fff;
@@ -2248,4 +2161,15 @@ input.sheet-legendary:checked + span::before {
 .sheet-rolltemplate-forbiddenlands .inlinerollresult.importantroll {
   color: inherit;
   border: none;
+}
+
+/* Mutant Year Zero */
+div.sheet-attributes-box1 {
+  background-size: cover;
+  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-new/Mutant%20Year%20Zero/images/header.jpg");
+}
+
+div.sheet-appearance-box1 {
+  background-size: cover;
+  background-image: url("https://github.com/clevett/roll20-character-sheets/blob/myz-new/Mutant%20Year%20Zero/images/header7.jpg?raw=true");
 }
