moved crit injuries

--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -462,8 +462,8 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
 }
 
 .sheet-character-injuries {
-  grid-row-start: 3;
-  grid-column: 1/4;
+  grid-row-start: 2;
+  grid-column: 3;
 }
 
 .sheet-character-weapons {
@@ -754,26 +754,31 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
 .sheet-injuries-box2 {
   grid-row-start: 1;
   grid-column-start: 1;
+  grid-column-end: 2;
 }
 
 .sheet-injuries-box3 {
-  grid-row-start: 1;
-  grid-column-start: 2;
+  grid-row-start: 2;
+  grid-column-start: 1;
+  grid-column-end: 2;
 }
 
 .sheet-injuries-box4 {
-  grid-row-start: 1;
-  grid-column-start: 3;
+  grid-row-start: 3;
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
 
 .sheet-injuries-box5 {
-  grid-row-start: 1;
-  grid-column-start: 4;
+  grid-row-start: 4;
+  grid-column-start: 1;
+  grid-column-end: 2;
 }
 
 .sheet-injuries-box6 {
-  grid-row-start: 1;
-  grid-column-start: 5;
+  grid-row-start: 5;
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
 
 .sheet-injuries-box7 {
@@ -782,8 +787,32 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
 }
 
 .sheet-injuries-box8 {
-  grid-column-start: 1;
+  grid-column-start: 3;
+  grid-row-start: 1;
+  grid-column-end: 4;
 }
+
+.sheet-injuries-box9 {
+  grid-column-start: 3;
+  grid-row-start: 2;
+  grid-column-end: 4;
+}
+
+.sheet-injuries-box10 {
+  grid-column-start: 3;
+  grid-row-start: 3;
+}
+
+.sheet-injuries-box11 {
+  grid-column-start: 3;
+  grid-row-start: 4;
+}
+
+.sheet-injuries-box12 {
+  grid-column-start: 3;
+  grid-row-start: 5;
+}
+
 
 /* ---------------------------------- Weapons */
 
@@ -2171,5 +2200,10 @@ div.sheet-attributes-box1 {
 
 div.sheet-appearance-box1 {
   background-size: cover;
-  background-image: url("https://github.com/clevett/roll20-character-sheets/blob/myz-new/Mutant%20Year%20Zero/images/header7.jpg?raw=true");
+  background-image: url("https://github.com/clevett/roll20-character-sheets/blob/myz-new/Mutant%20Year%20Zero/images/header7.jpg");
+}
+
+div.sheet-injuries-box1 {
+  background-size: cover;
+  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header2.jpg");
 }
