--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -1824,7 +1824,7 @@ span.sheet-spellconcentration
 .sheet-rolltemplate-dmg .sheet-containerold,
 .sheet-rolltemplate-atkdmg .sheet-container.sheet-damagetemplateold {
     background-repeat: no-repeat;
-    background-size: 189px 100%;
+    background-size: 14em 100%;
     color: black;
     width: 81%;
 }
@@ -1865,22 +1865,19 @@ span.sheet-spellconcentration
 .sheet-rolltemplate-simple .sheet-adv,
 .sheet-rolltemplate-atk .sheet-adv,
 .sheet-rolltemplate-atkdmg .sheet-adv,
-.sheet-rolltemplate-dmg .sheet-adv
-{
-    display: inline-block;
-    margin-top: 15px;
-    text-align: center;
+.sheet-rolltemplate-dmg .sheet-adv {
+    display       : inline-block;
+    margin-top    : 1em;
+    text-align    : center;
     vertical-align: top;
-    width: 6.2em;
+    width         : 6.2em;
 }
 
 .sheet-rolltemplate-simple .sheet-adv:first-child,
 .sheet-rolltemplate-atk .sheet-adv:first-child,
 .sheet-rolltemplate-atkdmg .sheet-adv:first-child,
-.sheet-rolltemplate-dmg .sheet-adv:first-child
-{
-    margin-left: 8px;
-    margin-right: -3px;
+.sheet-rolltemplate-dmg .sheet-adv:first-child {
+    margin-left: 0.2em;
 }
 
 .sheet-rolltemplate-simple .sheet-adv:nth-child(3),
@@ -2167,7 +2164,7 @@ span.sheet-spellconcentration
 .sheet-rolltemplate-dmg .sheet-descold
 {
     background-repeat: no-repeat;
-    background-size: 189px 100%;
+    background-size: 14em 100%;
     background: url(http://i.imgur.com/4988JS0.png) top left;
     color: black;
     padding-bottom: 5px;
@@ -2265,15 +2262,15 @@ span.sheet-spellconcentration
 }
 
 .sheet-rolltemplate-spell .sheet-container {
-    width: 263px;
-    background: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/5th%20Edition%20OGL%20by%20Roll20/images/spellbg.jpg) center center;
-    background-size: auto;
+    background       : url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/5th%20Edition%20OGL%20by%20Roll20/images/spellbg.jpg) center center;
     background-repeat: repeat;
-    color: black;
-    font-family: "Times New Roman", Times, serif;
-    padding: 10px;
-    margin-left: -45px;
-    border: 1px solid black;
+    background-size  : auto;
+    border           : 1px solid black;
+    color            : black;
+    font-family      : "Times New Roman", Times, serif;
+    margin-left      : -3em;
+    padding          : 0.5em;
+    width            : 19em;
 }
 
 .withoutavatars .sheet-rolltemplate-spell .sheet-container {
