uc-500 remove more pixels

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -1806,14 +1806,14 @@ span.sheet-spellconcentration
 .sheet-rolltemplate-atk .sheet-container,
 .sheet-rolltemplate-atkdmg .sheet-container.sheet-atk,
 .sheet-rolltemplate-dmg .sheet-atk {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 0.8em;
+    border-top-right-radius: 0.8em;
 }
 
 .sheet-rolltemplate-dmg .sheet-container,
 .sheet-rolltemplate-atkdmg .sheet-container.sheet-damagetemplate {
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 0.8em;
+    border-bottom-right-radius: 0.8em;
 }
 
 /* Obsolete Template */
@@ -1900,7 +1900,7 @@ span.sheet-spellconcentration
 {
     background-color: transparent;
     border: 0px;
-    font-size: 20px;
+    font-size: 1.2em;
     padding: 0px;
     width: 1em;
 }
@@ -1920,7 +1920,7 @@ span.sheet-spellconcentration
 .sheet-rolltemplate-atk .sheet-solo,
 .sheet-rolltemplate-atkdmg .sheet-solo,
 .sheet-rolltemplate-dmg .sheet-solo {
-    height: 23px;
+    height: 1.7em;
     padding-top: 1.1em;
     text-align: center;
     width: 100%;
@@ -2030,14 +2030,6 @@ span.sheet-spellconcentration
 {
     color: #4A57ED;
     border: 0px;
-}
-
-.sheet-rolltemplate-atk .sheet-damage,
-.sheet-rolltemplate-atkdmg .sheet-damage,
-.sheet-rolltemplate-dmg .sheet-damage 
-{
-    text-align: center;
-    margin-top: -5px;
 }
 
 .sheet-rolltemplate-atkdmg .sheet-damagetemplate .inlinerollresult.fullcrit,
