--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -345,8 +345,8 @@ input[type="checkbox"].sheet-input {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #000000;
   line-height: 1em;
-  height: 1.9em;
-  min-height: 1.9em;
+  height: 4em;
+  min-height: 4em;
   resize: vertical;
   overflow: hidden;
   width: 100%;
@@ -2200,7 +2200,7 @@ div.sheet-attributes-box1 {
 
 div.sheet-appearance-box1 {
   background-size: cover;
-  background-image: url("https://github.com/clevett/roll20-character-sheets/blob/myz-new/Mutant%20Year%20Zero/images/header7.jpg");
+  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header7.jpg");
 }
 
 div.sheet-injuries-box1 {
