--- a/Call_of_Cthulhu_7th_Ed/coc_7th_ed.css
+++ b/Call_of_Cthulhu_7th_Ed/coc_7th_ed.css
@@ -78,6 +78,17 @@ input.sheet-hide:checked ~ h4.sheet-section-head {
 /* -------------------------------------------------------------------------- */
 
 
+.charsheet div.sheet-vehicles {
+    display: none;
+}
+
+.sheet-togglevehicles[value="1"]:checked ~ div.sheet-vehicles {
+    display: block;
+}
+
+/* -------------------------------------------------------------------------- */
+
+
 .charsheet div.sheet-armorsection {
     display: none;
 }
