--- a/Call_of_Cthulhu_7th_Ed/coc_7th_ed.css
+++ b/Call_of_Cthulhu_7th_Ed/coc_7th_ed.css
@@ -2,6 +2,7 @@
     background-color: #888888;
     border: 2px solid black;
     color:black;
+    width: 840px;
 }
 
 .dummy{
@@ -33,6 +34,26 @@ div[class="repcontainer editmode"] ~ div[class^="repcontrol"] button[class="btn 
   visibility: hidden;
 }
 
+.charsheet .repcontrol_add,
+.charsheet .repcontrol_edit,
+.charsheet .repcontrol_del {
+    display: block;
+    background: #7c746a;
+    color: white;
+    box-shadow:none;
+    font-size:0.7em;
+    height:2.2em;
+}
+
+/* -------------------------------------------------------------------------- */
+
+input.sheet-hide:checked ~ div.sheet-2colrow,
+input.sheet-hide:checked ~ div.sheet-3colrow,
+input.sheet-hide:checked ~ div.sheet-section,
+input.sheet-hide:checked ~ h4.sheet-section-head {
+    display: none;
+}
+
 /* -------------------------------------------------------------------------- */
 
 .charsheet div.sheet-major-wound {
@@ -51,6 +72,17 @@ div[class="repcontainer editmode"] ~ div[class^="repcontrol"] button[class="btn 
 }
 
 .sheet-togglecompanions[value="1"]:checked ~ div.sheet-companions {
+    display: block;
+}
+
+/* -------------------------------------------------------------------------- */
+
+
+.charsheet div.sheet-vehicles {
+    display: none;
+}
+
+.sheet-togglevehicles[value="1"]:checked ~ div.sheet-vehicles {
     display: block;
 }
 
