[SWN:RE/Spanish] Fix for Innate AC, more items

--- a/Stars_Without_Number_Revised/Source/pug/character.pug
+++ b/Stars_Without_Number_Revised/Source/pug/character.pug
@@ -695,7 +695,7 @@ input(type="hidden", name="attr_setting_skill_query", value="hover").skills-quer
 					.enc-bonus(data-i18n="+STR")
 					.status(data-i18n="STATUS")
 				.armor-grid.rep-grid.edit
-					+text-input("innate_ac_name")(value="Innate AC").col-2
+					+text-input("innate_ac_name")(value="Innate AC", data-i18n="INNATE_AC").col-2
 					+text-input("innate_ac")(type="number", value="10").center
 				input(type="hidden", name="attr_show_armor_details", value="1").input-details
 				fieldset.repeating_armor
