uc-128:gumshoe:investigative buttons removed, added field to trackindividual cover/network points

--- a/Gumshoe by Roll20/GUMSHOE.css
+++ b/Gumshoe by Roll20/GUMSHOE.css
@@ -469,16 +469,29 @@ div.sheet-abilities {
 	height: 2.6em;
 }
 
-.sheet-content .sheet-subsection input[type=text] {
+.sheet-content .sheet-subsection input[type=text],
+.sheet-content .sheet-subsection-num input[type=text]
+.sheet-content .sheet-subsection-num input[type=number], {
 	font-style: italic;
 	font-size: 10px;
-	width: 90%;
 	border-bottom: 1px solid #ddd;
 	position: relative;
 	top: 5px;
-	text-align: left;
 	margin: 0 15px 0 5px;
 	color: #666;
+}
+
+.sheet-content .sheet-subsection input[type=text] {
+	width: 90%;
+	text-align: left;
+}
+
+.sheet-content .sheet-subsection-num input[type=text]{
+	width: 70%;
+	text-align: left;
+}
+.sheet-content .sheet-subsection-num input[type=number]{
+	width: 20%;
 }
 
 .sheet-abilities-col div::first-line, 
@@ -486,7 +499,8 @@ div.sheet-abilities {
 	line-height: 2em;
 }
 
-.sheet-abilities-item button[type=roll] {
+.sheet-abilities-item button[type=roll],
+.sheet-abilities-item span.sheet-abilities-title {
 	display: inline-block;
 	width: 58%;
 	padding: 2px 0 0;
@@ -524,6 +538,7 @@ div.sheet-abilities {
 }
 
 .sheet-abilities-item button[type=roll] + span,
+.sheet-abilities-item span.sheet-inv-ability,
 .sheet-abilities-item div.sheet-rep-title + span {
 	position: relative;
 	font-size: 10px;
