Final tweaks to magic effort

--- a/Stars_Without_Number_Revised/Source/Stars_Without_Number_Revised.scss
+++ b/Stars_Without_Number_Revised/Source/Stars_Without_Number_Revised.scss
@@ -816,6 +816,16 @@ input[type=number].sheet-inline-input {
 }
 
 /* Space Magic */
+
+.sheet-magic-effort {
+	display: grid;
+	grid: auto/ auto 45px 45px 45px 45px 80px;
+	align-items: center;
+	grid-column-gap: 4px;
+	margin-top: 5px;
+	h3 { line-height: 1 }
+}
+
 .sheet-spells {
 	margin-top: 5px;
 	> .sheet-flex-center { margin-bottom: 5px }
