--- a/Stars_Without_Number_Revised/Source/pug/character.pug
+++ b/Stars_Without_Number_Revised/Source/pug/character.pug
@@ -451,12 +451,13 @@ input(type="hidden", name="attr_setting_skill_query", value="hover").skills-quer
 				.skills-repeating
 					fieldset.repeating_magic-skills
 						+makeSkill("", true)
-				.psionics-effort.grey-box
+				.magic-effort.grey-box
 					h3(data-i18n="COMMITTED_EFFORT")
+					+text-input("magic_total_effort", "TOTAL")(type="number", value="0", min="0").center
 					+text-input("magic_committed_effort_current", "CURRENT")(type="number", value="0", min="0").center
 					+text-input("magic_committed_effort_scene", "SCENE")(type="number", value="0", min="0").center
 					+text-input("magic_committed_effort_day", "DAY")(type="number", value="0", min="0").center
-					+text-input("magic_total_effort", "TOTAL COMMITTED")(type="number", value="1", readonly, data-i18n-title="MAXIMUM_EFFORT_DESC").center
+					+text-input("magic_uncommitted_effort", "UNCOMMITTED")(type="number", value="1", readonly, data-i18n-title="MAXIMUM_EFFORT_DESC").center
 				.spells.grey-box.simple-repsection
 					.flex-center
 						h3(data-i18n="SPELLS")
