Space Magic finished

--- a/Stars_Without_Number_Revised/Source/Stars_Without_Number_Revised.scss
+++ b/Stars_Without_Number_Revised/Source/Stars_Without_Number_Revised.scss
@@ -853,6 +853,22 @@ input[type=number].sheet-inline-input {
 	}
 }
 
+.sheet-spell-slots {
+	display: grid;
+	grid: auto/ auto 55px 55px 55px 55px 55px;
+	align-items: center;
+	grid-column-gap: 4px;
+	margin-top: 5px;
+	h3 { line-height: 1 }
+}
+
+.sheet-magic-type {
+	&:not([value="adept"]) ~ div .sheet-adept,
+	&:not([value="magister"]) ~ div .sheet-magister,
+	&:not([value="arcanist"]) ~ div .sheet-arcanist,
+	&[value="adept"] ~ div .sheet-spellcaster { display: none }
+}
+
 /* Foci */
 .sheet-foci-loc {
 	&[value="left"] ~ .sheet-column .sheet-foci-right,
