Add i18n to missing Innate AC

--- a/Stars_Without_Number_Revised/Source/pug/character.pug
+++ b/Stars_Without_Number_Revised/Source/pug/character.pug
@@ -744,7 +744,7 @@ input(type="hidden", name="attr_magic_type", value="arcanist").magic-type
 					.enc-bonus(data-i18n="+STR")
 					.status(data-i18n="STATUS")
 				.armor-grid.rep-grid.edit
-					+text-input("innate_ac_name")(value="Innate AC").col-2
+					+text-input("innate_ac_name")(value="Innate AC", data-i18n="INNATE_AC").col-2
 					+text-input("innate_ac")(type="number", value="10").center
 				input(type="hidden", name="attr_show_armor_details", value="1").input-details
 				fieldset.repeating_armor
