--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -7,6 +7,10 @@ h1 {
   z-index: 0;
 }
 
+.charsheet {
+  margin-left: -2%;
+}
+
 .sheet-header-h1 {
   font-family: "Times New Roman", Times, serif;
   font-size: 1.25em;
@@ -342,16 +346,16 @@ input[type="checkbox"].sheet-input {
 }
 
 .sheet-input-textarea {
+  color      : #000000;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #000000;
+  height     : 3em;
   line-height: 1em;
-  height: 4em;
-  min-height: 4em;
-  resize: vertical;
-  overflow: hidden;
-  width: 100%;
-  margin: 0;
-  padding: 0 2px 0 2px;
+  margin     : 0;
+  min-height : 3em;
+  overflow   : hidden;
+  padding    : 0 2px 0 2px;
+  resize     : vertical;
+  width      : 100%;
 }
 
 input[disabled].sheet-input-number, input[readonly].sheet-input, textarea[disabled].sheet-input, textarea[readonly].sheet-input, input[readonly].sheet-input-number {
@@ -467,7 +471,7 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
 }
 
 .sheet-character-weapons {
-  grid-row-start: 4;
+  grid-row-start: 6;
   grid-column: 1/4;
 }
 
@@ -487,42 +491,20 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
 }
 
 .sheet-character-armor {
-  grid-row-start: 6;
-  grid-column: 1/3;
+  grid-row-start: 7;
+  grid-column: 1/2;
 }
 
 .sheet-character-gear {
-  grid-row-start: 6;
+  grid-row-start: 7;
   grid-column-start: 3;
   grid-row-end: span 5;
 }
 
-.sheet-character-consumables {
-  grid-row-start: 7;
-  grid-column-start: 1;
-  background-image: url(https://s3.amazonaws.com/files.d20.io/images/77923969/rCsuF5JKiAG1oJwXLYGB7Q/max.jpg);
-
-/*  black version
-  background-image: url(https://s3.amazonaws.com/files.d20.io/images/77920570/BbWQkoopzZfCFHSHxCurHw/max.jpg);
-*/
-
-  background-repeat: no-repeat;
-}
-
-.sheet-character-coins {
-  grid-row-start: 7;
-  grid-column-start: 2;
-}
 
 .sheet-character-experience {
   grid-row-start: 8;
   grid-column-start: 1;
-  background: #000;
-}
-
-.sheet-character-willpower {
-  grid-row-start: 8;
-  grid-column-start: 2;
   background: #000;
 }
 
@@ -537,21 +519,15 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
   grid-column-start: 3;
 }
 
-.sheet-character-spells {
-  grid-row-start: 11;
-  grid-column: 1/3;
-  grid-row-end: span 4;
-}
-
 .sheet-character-mount_gear {
-  grid-row-start: 13;
+  grid-row-start: 14;
   grid-column-start: 3;
   grid-row-end: span 4;
 }
 
 .sheet-character-notes {
   grid-column: 1/3;
-  grid-row-end: span 2;
+  grid-row-end: span 3;
 }
 
 /* ---------------------------------- Attributes */
@@ -740,10 +716,14 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
 
 .sheet-injuries-grid {
   display: grid;
-  grid-template-columns: 1fr 6em 6em 2fr 6em;
+  grid-template-columns: 6fr 5em 2fr 6em;
   grid-row-gap: 2px;
   grid-column-gap: 2px;
   padding: 0 0 2px 0;
+}
+
+.sheet-injuries-grid label {
+  font-size: 1em;
 }
 
 .sheet-injuries-box1 {
@@ -754,7 +734,6 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
 .sheet-injuries-box2 {
   grid-row-start: 1;
   grid-column-start: 1;
-  grid-column-end: 2;
 }
 
 .sheet-injuries-box3 {
@@ -766,7 +745,7 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
 .sheet-injuries-box4 {
   grid-row-start: 3;
   grid-column-start: 1;
-  grid-column-end: 3;
+  grid-column-end: 2;
 }
 
 .sheet-injuries-box5 {
@@ -778,7 +757,7 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
 .sheet-injuries-box6 {
   grid-row-start: 5;
   grid-column-start: 1;
-  grid-column-end: 3;
+  grid-column-end: 2;
 }
 
 .sheet-injuries-box7 {
@@ -787,29 +766,32 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
 }
 
 .sheet-injuries-box8 {
-  grid-column-start: 3;
+  grid-column-start: 2;
   grid-row-start: 1;
-  grid-column-end: 4;
+  grid-column-end: 6;
 }
 
 .sheet-injuries-box9 {
-  grid-column-start: 3;
+  grid-column-start: 2;
   grid-row-start: 2;
   grid-column-end: 4;
 }
 
 .sheet-injuries-box10 {
-  grid-column-start: 3;
+  grid-column-start: 2;
+  grid-column-end: 6;
   grid-row-start: 3;
 }
 
 .sheet-injuries-box11 {
-  grid-column-start: 3;
+  grid-column-start: 2;
+  grid-column-end: 6;
   grid-row-start: 4;
 }
 
 .sheet-injuries-box12 {
-  grid-column-start: 3;
+  grid-column-start: 2;
+  grid-column-end: 6;
   grid-row-start: 5;
 }
 
@@ -907,7 +889,8 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
   grid-column-gap: 2px;
 }
 
-.sheet-talents-box {
+.sheet-talents-box,
+.sheet-mutant-box {
   grid-row-start: 1;
   grid-column: 1/4;
 }
@@ -1868,16 +1851,20 @@ input.sheet-legendary:checked + span::before {
 
 /* ROLL TEMPLATE STYLING */
 
-.sheet-rolltemplate-forbiddenlands {
+.sheet-rolltemplate-rolls {
   padding: 12px 0 12px 0;
 }
 
-.sheet-rolltemplate-forbiddenlands span.sheet-label {
+.sheet-rolltemplate-rolls button:hover {
+  background:none;
+}
+
+.sheet-rolltemplate-rolls span.sheet-label {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   font-weight: bold;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-wrap {
+.sheet-rolltemplate-rolls .sheet-template-wrap {
   background-color: #f1f1f1;
   border-radius: 5px;
   width: 240px;
@@ -1893,7 +1880,7 @@ input.sheet-legendary:checked + span::before {
   border-image-source: url(http://imgsrv.roll20.net/?src=imgsrv.roll20.net/%3Fsrc%3Dimgsrv.roll20.net/%253Fsrc%253Dimgsrv.roll20.net/%25253Fsrc%25253Di.imgur.com/XuBOFJI.png);
 }
 
-.sheet-rolltemplate-forbiddenlands div.sheet-template-header {
+.sheet-rolltemplate-rolls div.sheet-template-header {
   background-color: #000;
   font-family: "Times New Roman", Times, serif;
   font-size: 1.1em;
@@ -1906,26 +1893,26 @@ input.sheet-legendary:checked + span::before {
   margin: 2px -5px 2px -5px;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-header a {
+.sheet-rolltemplate-rolls .sheet-template-header a {
   color: #FFF;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-left.sheet-template-header {
+.sheet-rolltemplate-rolls .sheet-template-span-left.sheet-template-header {
   width: 43%;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-center.sheet-template-header {
+.sheet-rolltemplate-rolls .sheet-template-span-center.sheet-template-header {
   z-index: 1;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-right.sheet-template-header {
+.sheet-rolltemplate-rolls .sheet-template-span-right.sheet-template-header {
   width: 43%;
   text-align: right;
   display: block;
 }
 
-.sheet-rolltemplate-forbiddenlands div.sheet-template-subtitle,
-.sheet-rolltemplate-forbiddenlands div.sheet-template-footer {
+.sheet-rolltemplate-rolls div.sheet-template-subtitle,
+.sheet-rolltemplate-rolls div.sheet-template-footer {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   font-size: 1em;
   display: flex;
@@ -1935,11 +1922,11 @@ input.sheet-legendary:checked + span::before {
   margin: 0 -5px 5px -5px;
 }
 
-.sheet-rolltemplate-forbiddenlands div.sheet-template-subtitle {
+.sheet-rolltemplate-rolls div.sheet-template-subtitle {
   font-weight: bold;
 }
 
-.sheet-rolltemplate-forbiddenlands div.sheet-free-text {
+.sheet-rolltemplate-rolls div.sheet-free-text {
   font-size: 1em;
   display: flex;
   align-items: center;
@@ -1949,7 +1936,7 @@ input.sheet-legendary:checked + span::before {
   margin: -2px -5px 2px -5px;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-grid {
+.sheet-rolltemplate-rolls .sheet-template-grid {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   display: grid;
   grid-gap: 1px;
@@ -1959,7 +1946,7 @@ input.sheet-legendary:checked + span::before {
   grid-template-columns: repeat(6, 1fr);
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-grid-item {
+.sheet-rolltemplate-rolls .sheet-template-grid-item {
   background-color: transparent;
   border: none;
   border-radius: 5px;
@@ -1967,33 +1954,33 @@ input.sheet-legendary:checked + span::before {
   text-align: center;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-six {
+.sheet-rolltemplate-rolls .sheet-template-span-six {
   grid-column: 1 / 7;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-half {
+.sheet-rolltemplate-rolls .sheet-template-span-half {
   grid-column: 1 / 4;
   line-height: 1em;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-2nd-half {
+.sheet-rolltemplate-rolls .sheet-template-span-2nd-half {
   grid-column: 4 / 7;
   line-height: 1em;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-left {
+.sheet-rolltemplate-rolls .sheet-template-span-left {
   grid-column: 1 / 3;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-center {
+.sheet-rolltemplate-rolls .sheet-template-span-center {
   grid-column: 3 / 5;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-right {
+.sheet-rolltemplate-rolls .sheet-template-span-right {
   grid-column: 5 / 7;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-grid .sheet-scroll-text {
+.sheet-rolltemplate-rolls .sheet-template-grid .sheet-scroll-text {
   text-align: left;
   max-height: 6em;
   overflow-y: auto;
@@ -2001,75 +1988,75 @@ input.sheet-legendary:checked + span::before {
 
 /* used for consumable's single dice roll */
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-center-die {
+.sheet-rolltemplate-rolls .sheet-template-span-center-die {
   grid-column: 3 / 5;
   width: 38%;
   margin-left: 24%;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-one {
+.sheet-rolltemplate-rolls .sheet-template-span-one {
   grid-column: 1 / 2;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-two {
+.sheet-rolltemplate-rolls .sheet-template-span-two {
   grid-column: 2 / 3;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-three {
+.sheet-rolltemplate-rolls .sheet-template-span-three {
   grid-column: 3 / 4;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-four {
+.sheet-rolltemplate-rolls .sheet-template-span-four {
   grid-column: 4 / 5;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-five {
+.sheet-rolltemplate-rolls .sheet-template-span-five {
   grid-column: 5 / 6;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-span-shix {
+.sheet-rolltemplate-rolls .sheet-template-span-shix {
   grid-column: 6 / 7;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-artifact-1 {
+.sheet-rolltemplate-rolls .sheet-template-artifact-1 {
   background-image: url("https://s3.amazonaws.com/files.d20.io/images/76934530/UmA1p3wFzVfFRD7A7zo6Tg/max.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-artifact-2 {
+.sheet-rolltemplate-rolls .sheet-template-artifact-2 {
   background-image: url("https://s3.amazonaws.com/files.d20.io/images/76934537/ThGw7C_jknVBMqK9e0g00g/max.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-artifact-3 {
+.sheet-rolltemplate-rolls .sheet-template-artifact-3 {
   background-image: url("https://s3.amazonaws.com/files.d20.io/images/76934549/vSFpnqGHv3kwA6Zhb9BZPw/max.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-artifact-4 {
+.sheet-rolltemplate-rolls .sheet-template-artifact-4 {
   background-image: url("https://s3.amazonaws.com/files.d20.io/images/76934559/7Fy7-GlBQMw0lbXyotUHBg/max.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-success {
+.sheet-rolltemplate-rolls .sheet-template-success {
     max-width: 100%;
     height: auto;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-bane {
+.sheet-rolltemplate-rolls .sheet-template-bane {
     max-width: 100%;
     height: auto;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-bold {
+.sheet-rolltemplate-rolls .sheet-template-bold {
   font-weight: bold;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-inline {
+.sheet-rolltemplate-rolls .sheet-template-inline {
   font-size: 2em;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   background-color: transparent;
@@ -2079,11 +2066,11 @@ input.sheet-legendary:checked + span::before {
   line-height: 0;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-smaller {
+.sheet-rolltemplate-rolls .sheet-template-smaller {
     font-size: 0.75em;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-white-dice {
+.sheet-rolltemplate-rolls .sheet-template-white-dice {
   background-color: #fff;
   border: 1px solid #000;
   border-radius: 5px;
@@ -2092,7 +2079,7 @@ input.sheet-legendary:checked + span::before {
   line-height: 0;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-maroon-dice {
+.sheet-rolltemplate-rolls .sheet-template-maroon-dice {
     background-color: #810000;
     color: #fff;
     border: 1px solid #000;
@@ -2102,7 +2089,7 @@ input.sheet-legendary:checked + span::before {
     line-height: 0;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-black-dice {
+.sheet-rolltemplate-rolls .sheet-template-black-dice {
   background-color: #000;
   color: #fff;
   border: 1px solid #000;
@@ -2112,7 +2099,7 @@ input.sheet-legendary:checked + span::before {
   line-height: 0;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-green-dice {
+.sheet-rolltemplate-rolls .sheet-template-green-dice {
     background-color: #235402;
     color: #fff;
     border: 1px solid #000;
@@ -2122,7 +2109,7 @@ input.sheet-legendary:checked + span::before {
     line-height: 0;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-blue-dice {
+.sheet-rolltemplate-rolls .sheet-template-blue-dice {
     background-color: #0088af;
     color: #fff;
     border: 1px solid #000;
@@ -2132,7 +2119,7 @@ input.sheet-legendary:checked + span::before {
     line-height: 0;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-orange-dice {
+.sheet-rolltemplate-rolls .sheet-template-orange-dice {
   background-color: #ff8c00;
   color: #fff;
   border: 1px solid #000;
@@ -2142,7 +2129,7 @@ input.sheet-legendary:checked + span::before {
   line-height: 0;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-purple-dice {
+.sheet-rolltemplate-rolls .sheet-template-purple-dice {
     background-color: #800080;
     color: #fff;
     border: 1px solid #000;
@@ -2152,13 +2139,13 @@ input.sheet-legendary:checked + span::before {
     line-height: 0;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-white-dice > .inlinerollresult,
-.sheet-rolltemplate-forbiddenlands .sheet-template-maroon-dice > .inlinerollresult,
-.sheet-rolltemplate-forbiddenlands .sheet-template-black-dice > .inlinerollresult,
-.sheet-rolltemplate-forbiddenlands .sheet-template-green-dice > .inlinerollresult,
-.sheet-rolltemplate-forbiddenlands .sheet-template-blue-dice > .inlinerollresult,
-.sheet-rolltemplate-forbiddenlands .sheet-template-orange-dice > .inlinerollresult,
-.sheet-rolltemplate-forbiddenlands .sheet-template-purple-dice > .inlinerollresult {
+.sheet-rolltemplate-rolls .sheet-template-white-dice > .inlinerollresult,
+.sheet-rolltemplate-rolls .sheet-template-maroon-dice > .inlinerollresult,
+.sheet-rolltemplate-rolls .sheet-template-black-dice > .inlinerollresult,
+.sheet-rolltemplate-rolls .sheet-template-green-dice > .inlinerollresult,
+.sheet-rolltemplate-rolls .sheet-template-blue-dice > .inlinerollresult,
+.sheet-rolltemplate-rolls .sheet-template-orange-dice > .inlinerollresult,
+.sheet-rolltemplate-rolls .sheet-template-purple-dice > .inlinerollresult {
   font-size: 2em;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   font-weight: bold;
@@ -2169,30 +2156,53 @@ input.sheet-legendary:checked + span::before {
   line-height: 0;
 }
 
-.sheet-rolltemplate-forbiddenlands .sheet-template-green-dice > div > .sheet-template-inline,
-.sheet-rolltemplate-forbiddenlands .sheet-template-blue-dice > div > .sheet-template-inline,
-.sheet-rolltemplate-forbiddenlands .sheet-template-orange-dice > div > .sheet-template-inline {
+.sheet-rolltemplate-rolls .sheet-template-green-dice > div > .sheet-template-inline,
+.sheet-rolltemplate-rolls .sheet-template-blue-dice > div > .sheet-template-inline,
+.sheet-rolltemplate-rolls .sheet-template-orange-dice > div > .sheet-template-inline {
   font-size: 2.25em;
   font-variant: diagonal-fractions;
   text-shadow: 1px 1px 1px black;
 }
 
-.sheet-rolltemplate-forbiddenlands .inlinerollresult.fullcrit {
+.sheet-rolltemplate-rolls .inlinerollresult.fullcrit {
     color: inherit;
     border: none;
 }
 
-.sheet-rolltemplate-forbiddenlands .inlinerollresult.fullfail {
+.sheet-rolltemplate-rolls .inlinerollresult.fullfail {
   color: inherit;
   border: none;
 }
 
-.sheet-rolltemplate-forbiddenlands .inlinerollresult.importantroll {
+.sheet-rolltemplate-rolls .inlinerollresult.importantroll {
   color: inherit;
   border: none;
 }
 
 /* Mutant Year Zero */
+div.sheet-display button[type="action"] {
+  font-family: "pictos";
+  text-transform: lowercase;
+}
+
+div.sheet-settings {
+  border-top: 1px dotted orange;
+  height    : 12em;
+  overflow  : hidden;
+}
+
+input.sheet-display[value="settings"] ~ div.sheet-settings {
+    height    : 0px;
+    transition: height 2s;
+    -webkit-transition: height 2s; /* Safari */
+}
+
+input.sheet-display[value="display"] ~ div.sheet-settings {
+    height    : 12em;
+    transition: height 2s;
+    -webkit-transition: height 2s; /* Safari */
+}
+
 div.sheet-attributes-box1 {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-new/Mutant%20Year%20Zero/images/header.jpg");
@@ -2206,4 +2216,41 @@ div.sheet-appearance-box1 {
 div.sheet-injuries-box1 {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header2.jpg");
+}
+
+div.sheet-skills-box1 {
+  background-size: cover;
+  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header3.jpg");
+}
+
+div.sheet-dice_pool-box1 {
+  background-size: cover;
+  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header.jpg");
+}
+
+div.sheet-dice_pool-box1 {
+  background-size: cover;
+  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header.jpg");
+}
+
+
+div.sheet-talents-box {
+  background-size: cover;
+  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header9.jpg");
+}
+
+div.sheet-mutant-box {
+  background-size: cover;
+  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header10.jpg");
+}
+
+div.sheet-weapons-box,
+div.sheet-gear-box1 {
+  background-size: cover;
+  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header13.jpg");
+}
+
+div.sheet-relationships-box1 {
+  background-size: cover;
+  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header15.jpg");
 }
