--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -286,7 +286,6 @@ button {
   }
 
 button:hover {
-    border-color: #441b10;
     color       : #fcd67b;
     font-weight : bold;
     background-color: #8c4110;
@@ -490,9 +489,14 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
   grid-column-start: 3;
 }
 
+.sheet-rot-level {
+  grid-row-start: 7;
+  grid-column: 1/1;
+}
+
 .sheet-character-armor {
   grid-row-start: 7;
-  grid-column: 1/2;
+  grid-column: 2/2;
 }
 
 .sheet-character-gear {
@@ -1780,7 +1784,6 @@ button[type="roll"]:hover {
 
 button[type="action"] > span {
   font-size: 95%;
-  color: #333;
 }
 
 input.sheet-dice-selection {
@@ -2071,7 +2074,7 @@ input.sheet-legendary:checked + span::before {
 }
 
 .sheet-rolltemplate-rolls .sheet-template-white-dice {
-  background-color: #fff;
+  background-color: yellow;
   border: 1px solid #000;
   border-radius: 5px;
   padding: 3px;
@@ -2080,7 +2083,7 @@ input.sheet-legendary:checked + span::before {
 }
 
 .sheet-rolltemplate-rolls .sheet-template-maroon-dice {
-    background-color: #810000;
+    background-color: green;
     color: #fff;
     border: 1px solid #000;
     border-radius: 5px;
@@ -2253,4 +2256,9 @@ div.sheet-gear-box1 {
 div.sheet-relationships-box1 {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header15.jpg");
+}
+
+div.sheet-rot-box {
+  background-size: cover;
+  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header12.jpg");
 }
