--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -46,9 +46,8 @@ hr.sheet-horizontal-rule::before { /* Not really supposed to work, but does */
   border-radius: 5px;
 }
 
-.sheet-header {
+div.sheet-header {
   font-weight: bold;
-  background-color: #000;
   color: #FFF;
   display: flex;
   align-items: center;
@@ -60,7 +59,6 @@ hr.sheet-horizontal-rule::before { /* Not really supposed to work, but does */
 .sheet-column-header {
   font-size: 0.9em;
   color: #FFF;
-  background-color: #000;
   text-align: center;
   padding: 22px 2px 0px 0px;
 }
@@ -214,12 +212,6 @@ button.sheet-roll-button {
   border-bottom-color: #bbb;
   border-image: initial;
   cursor: pointer;
-}
-
-/* api dice toggle */
-button.sheet-api-button {
-  border: 1px dotted black;
-  box-shadow: 1px 2px 2px darkgrey;
 }
 
 input[type="checkbox"].sheet-hidden {
@@ -384,7 +376,8 @@ button[type="action"] {
 	z-index: 6;
 }
 
-input.sheet-expand + span::before {
+input.sheet-expand + span::before,
+button.sheet-toggles {
   opacity: 0;
   position: absolute;
   top: -8px;
@@ -413,7 +406,8 @@ input.sheet-expand + span::before {
 .repitem .sheet-mount_gear-grid:hover input.sheet-expand + span::before,
 .repitem .sheet-mount_gear-grid input.sheet-expand:checked + span::before,
 .repitem .sheet-spells-grid:hover input.sheet-expand + span::before,
-.repitem .sheet-spells-grid input.sheet-expand:checked + span::before {
+.repitem .sheet-spells-grid input.sheet-expand:checked + span::before,
+button.sheet-toggles:hover {
   opacity: 100;
 }
 
@@ -506,15 +500,20 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
 }
 
 
-.sheet-character-experience {
+div.sheet-character-experience {
   grid-row-start: 8;
-  grid-column-start: 1;
-  background: #000;
+  grid-column: 1 / 1;
+}
+
+div.sheet-experience-dots {
+  grid-row-start: 8;
+  grid-column: 2 / 2;
+  padding: 0.5em
 }
 
 .sheet-character-relationships {
   grid-row-start: 9;
-  grid-column: 1/3;
+  grid-column: 1 / 3;
   grid-row-end: span 2;
 }
 
@@ -1328,39 +1327,27 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
 
 /* ---------------------------------- Experience/Willpower */
 
-.sheet-experience-grid,
-.sheet-willpower-grid {
+.sheet-experience-grid {
   display: grid;
   grid-template-columns: 4.25fr 2.2em 1fr;
   margin-right: -1px;
 }
 
-.sheet-experience-box1,
-.sheet-willpower-box1 {
+div.sheet-experience-box {
   grid-row-start: 1;
-  grid-column-start: 1;
+  grid-column-start: 1 / 1;
 }
 
-.sheet-experience-box2,
-.sheet-willpower-box2 {
+div.sheet-experience-box div.sheet-dots {
   grid-row-start: 1;
-  grid-column-start: 2;
+  grid-column-start: 2 / 3;
+}
+
+.sheet-experience-grid .sheet-header > .sheet-input {
   z-index: 1;
 }
 
-.sheet-experience-box3,
-.sheet-willpower-box3 {
-  grid-row-start: 1;
-  grid-column-start: 3;
-}
-
-.sheet-experience-grid .sheet-header > .sheet-input,
-.sheet-willpower-grid .sheet-header > .sheet-input {
-  z-index: 1;
-}
-
-.sheet-experience-grid .sheet-header > h1,
-.sheet-willpower-grid .sheet-header > h1 {
+.sheet-experience-grid .sheet-header > h1 {
   margin: 0;
 }
 
@@ -1818,13 +1805,13 @@ input.sheet-dice-selection:hover + span::before {
 
 input.sheet-dice-selection:checked + span::before {
     color: #000;
-    background: #FFFFFF;
+    background: yellow;
     font-weight: bold;
 }
 
 input.sheet-skill:checked + span::before {
     color: #fff;
-    background: #810000;
+    background: #235402;
 }
 
 input.sheet-gear:checked + span::before {
@@ -1835,21 +1822,6 @@ input.sheet-gear:checked + span::before {
 input.sheet-negative:checked + span::before {
     color: #fff;
     background: #800080;
-}
-
-input.sheet-mighty:checked + span::before {
-    color: #fff;
-    background: #235402;
-}
-
-input.sheet-epic:checked + span::before {
-    color: #fff;
-    background: #0088af;
-}
-
-input.sheet-legendary:checked + span::before {
-    color: #000;
-    background: #ff8c00;
 }
 
 /* ROLL TEMPLATE STYLING */
@@ -1880,7 +1852,6 @@ input.sheet-legendary:checked + span::before {
   border-image-outset: 4 4 3 4;
   border-image-repeat: repeat;
   margin-left: -20px;
-  border-image-source: url(http://imgsrv.roll20.net/?src=imgsrv.roll20.net/%3Fsrc%3Dimgsrv.roll20.net/%253Fsrc%253Dimgsrv.roll20.net/%25253Fsrc%25253Di.imgur.com/XuBOFJI.png);
 }
 
 .sheet-rolltemplate-rolls div.sheet-template-header {
@@ -2073,7 +2044,7 @@ input.sheet-legendary:checked + span::before {
     font-size: 0.75em;
 }
 
-.sheet-rolltemplate-rolls .sheet-template-white-dice {
+.sheet-rolltemplate-rolls .sheet-template-base-dice {
   background-color: yellow;
   border: 1px solid #000;
   border-radius: 5px;
@@ -2082,8 +2053,8 @@ input.sheet-legendary:checked + span::before {
   line-height: 0;
 }
 
-.sheet-rolltemplate-rolls .sheet-template-maroon-dice {
-    background-color: green;
+.sheet-rolltemplate-rolls .sheet-template-skill-dice {
+    background-color: #235402;
     color: #fff;
     border: 1px solid #000;
     border-radius: 5px;
@@ -2102,53 +2073,14 @@ input.sheet-legendary:checked + span::before {
   line-height: 0;
 }
 
-.sheet-rolltemplate-rolls .sheet-template-green-dice {
-    background-color: #235402;
-    color: #fff;
-    border: 1px solid #000;
-    border-radius: 5px;
-    padding: 3px;
-    text-align: center;
-    line-height: 0;
+.sheet-rolltemplate-rolls .sheet-template-skill-dice img,
+.sheet-rolltemplate-rolls .sheet-template-black-dice  img {
+  -webkit-filter: invert(100%);
 }
 
-.sheet-rolltemplate-rolls .sheet-template-blue-dice {
-    background-color: #0088af;
-    color: #fff;
-    border: 1px solid #000;
-    border-radius: 5px;
-    padding: 3px;
-    text-align: center;
-    line-height: 0;
-}
-
-.sheet-rolltemplate-rolls .sheet-template-orange-dice {
-  background-color: #ff8c00;
-  color: #fff;
-  border: 1px solid #000;
-  border-radius: 5px;
-  padding: 3px;
-  text-align: center;
-  line-height: 0;
-}
-
-.sheet-rolltemplate-rolls .sheet-template-purple-dice {
-    background-color: #800080;
-    color: #fff;
-    border: 1px solid #000;
-    border-radius: 5px;
-    padding: 3px;
-    text-align: center;
-    line-height: 0;
-}
-
-.sheet-rolltemplate-rolls .sheet-template-white-dice > .inlinerollresult,
-.sheet-rolltemplate-rolls .sheet-template-maroon-dice > .inlinerollresult,
-.sheet-rolltemplate-rolls .sheet-template-black-dice > .inlinerollresult,
-.sheet-rolltemplate-rolls .sheet-template-green-dice > .inlinerollresult,
-.sheet-rolltemplate-rolls .sheet-template-blue-dice > .inlinerollresult,
-.sheet-rolltemplate-rolls .sheet-template-orange-dice > .inlinerollresult,
-.sheet-rolltemplate-rolls .sheet-template-purple-dice > .inlinerollresult {
+.sheet-rolltemplate-rolls .sheet-template-base-dice > .inlinerollresult,
+.sheet-rolltemplate-rolls .sheet-template-skill-dice > .inlinerollresult,
+.sheet-rolltemplate-rolls .sheet-template-black-dice > .inlinerollresult {
   font-size: 2em;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   font-weight: bold;
@@ -2158,15 +2090,6 @@ input.sheet-legendary:checked + span::before {
   margin: 50% 0 50% 0;
   line-height: 0;
 }
-
-.sheet-rolltemplate-rolls .sheet-template-green-dice > div > .sheet-template-inline,
-.sheet-rolltemplate-rolls .sheet-template-blue-dice > div > .sheet-template-inline,
-.sheet-rolltemplate-rolls .sheet-template-orange-dice > div > .sheet-template-inline {
-  font-size: 2.25em;
-  font-variant: diagonal-fractions;
-  text-shadow: 1px 1px 1px black;
-}
-
 .sheet-rolltemplate-rolls .inlinerollresult.fullcrit {
     color: inherit;
     border: none;
@@ -2183,9 +2106,12 @@ input.sheet-legendary:checked + span::before {
 }
 
 /* Mutant Year Zero */
-div.sheet-display button[type="action"] {
-  font-family: "pictos";
+button.sheet-toggles {
   text-transform: lowercase;
+  font-weight: normal;
+  background: none;
+  border: none;
+  padding: 0px;
 }
 
 div.sheet-settings {
@@ -2205,6 +2131,34 @@ input.sheet-display[value="display"] ~ div.sheet-settings {
     transition: height 2s;
     -webkit-transition: height 2s; /* Safari */
 }
+
+div.sheet-dots input[type="radio"]:nth-of-type(1n+2) {
+    border-radius : 1em;
+    cursor        : pointer;
+    height        : 1.23em;
+    left          : 1.3em;
+    margin-left   : -1em;
+    opacity       : 0;
+    position      : relative;
+    vertical-align: middle;
+    width         : 1.23em;
+    z-index       : 1;
+}
+
+div.sheet-dots input[type="radio"] + span {
+  background-color: #c77624;
+  border          : 2px solid #000;
+  border-radius   : 1em;
+  display         : inline-block;
+  height          : 1em;
+  vertical-align  : middle;
+  width           : 1em;
+}
+
+div.sheet-dots input[type="radio"]:checked ~ input[type="radio"] + span {    
+   background-color: transparent;
+}
+
 
 div.sheet-attributes-box1 {
   background-size: cover;
@@ -2248,7 +2202,9 @@ div.sheet-mutant-box {
 }
 
 div.sheet-weapons-box,
-div.sheet-gear-box1 {
+div.sheet-gear-box1,
+div.sheet-gear-box6,
+span.sheet-armor-box4  {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header13.jpg");
 }
@@ -2262,3 +2218,19 @@ div.sheet-rot-box {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header12.jpg");
 }
+
+div.sheet-armor-box {
+  background-size: cover;
+  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header12.jpg");
+}
+
+div.sheet-character-experience  {
+  background-size: cover;
+  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header6.jpg");
+}
+
+div.sheet-notes-box1 {
+  background-size: cover;
+  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header18.jpg");
+}
+
